fixed overflow in modding

--- a/src/components/modstatehandler/ModStateHandler.css
+++ b/src/components/modstatehandler/ModStateHandler.css
@@ -12,6 +12,7 @@
 }
 
 .handler-background {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -264,6 +265,9 @@
 }
 
 @media screen and (max-width: 1202px) {
+    .handler-background {
+        display: block;
+    }
     .slot-wrapper {
         perspective: unset;
         perspective-origin: unset;
