--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -7,7 +7,8 @@
     height: 100vh;
     /* bottom: 0; */
     background-color: rgba(0, 0, 0, 0.5);
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .sidebar-title {
